Fix incidental whitespace/structure in routes page

--- a/pages/routes-page/routes-page.css
+++ b/pages/routes-page/routes-page.css
@@ -94,8 +94,7 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
+    font-family: 'Merriweather', serif;
   }
   
   body {
